--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/ahsansoftengineer/node_typescript_II#readme",
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
@@ -33,14 +32,22 @@
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/express-ejs-layouts": "^2.5.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.23",
     "@types/sequelize": "^4.28.11",
+    "@types/shelljs": "^0.8.11",
     "eslint": "^8.12.0",
+    "fs-extra": "^10.0.1",
     "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.5",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
 }
