--- a/package.json
+++ b/package.json
@@ -4,13 +4,25 @@
   "description": "> Here we are Setting up the followings in Node Application\r 1. Node with Typescript\r 2. Nodemon\r 3. EJS\r 4. Build Solution",
   "main": "dist/index.js",
   "scripts": {
+    "clean": "rimraf dist/",
+    "copy-assets": "ts-node tools/copyAssests",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "tsc": "tsc",
+    "build": "npm-run-all clean lint tsc copy-assets",
+    "dev:start": "npm-run-all build start",
+    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
+
   },
+  "include": [
+    "src/**/*"
+  ],
   "compilerOptions": {
     "sourceMap": true,
     "target": "esnext",
     "outDir": "./dist",
-    "baseUrl": "./src"
+    "baseUrl": "."
   },
   "repository": {
     "type": "git",
@@ -41,6 +53,8 @@
     "@types/node": "^17.0.23",
     "@types/sequelize": "^4.28.11",
     "@types/shelljs": "^0.8.11",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.12.0",
     "fs-extra": "^10.0.1",
     "nodemon": "^2.0.15",
@@ -48,6 +62,7 @@
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
     "ts-node": "^10.7.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.6.3"
   }
 }
